--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.47.10",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15"
