--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
-	  "headers": [
-	  	    {
-	  	    	      "source": "/snippets",
-	  	    	            "headers": [
-	  	    	            	        {
-	  	    	            	        	          "key": "Cache-Control",
-	  	    	            	        	                    "value": "public, max-age=3600, stale-while-revalidate=86400"
-	  	    	            	        	                            }
-	  	    	            	        	                                  ]
-	  	    	            	        	                                      }
-	  	    	            	        	                                        ]
-	  	    	            	        	                                        }
-	  	    	            	        	                                        
-	  	    	            	        }
-	  	    	            ]
-	  	    }
-	  ]
-}
+	  "headers": [{
+	  	   "source": "/snippets",
+	  	   "headers": [{
+	  	       "key": "Cache-Control",
+	  	    	  "value": "public, max-age=3600, stale-while-revalidate=86400"
+        ]}
+    }]
+}  	    	            	       
