--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@supabase/supabase-js": "^2.47.10",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"hljs": "^6.2.3",
+		"svelte-highlight": "^7.8.2"
 	}
 }
